# board-tileset

./: CMakeLists.txt  Jenkinsfile  README.md  conanfile.py
include/: board.h  draw_interface.h  layer.h  layout.h
include/board_game/: board.h  board_game.h  layer.h
src/: board.cpp  board_game.cpp  layer.cpp  layout.cpp
